fixtures/valid/optional-arguments.scl
@mixin($required, $optional = "default")
    required = $required
    optional = $optional

mixin("1")
mixin("2","non-default")
