fixtures/invalid/optional-arguments.scl
@mixin($optional="default", $required )
    required = $required
    optional = $optional

mixin("1")
mixin("2","non-default")

